--- a/04-deployment/starter.ipynb
+++ b/04-deployment/starter.ipynb
@@ -68,8 +68,14 @@
    "source": [
     "categorical = ['PULocationID', 'DOLocationID']\n",
     "\n",
-    "def read_data(filename):\n",
+    "def read_data(year, month):\n",
+    "    \n",
+    "    filename= f'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_{year:04d}-{month:02d}.parquet'\n",
+    "    \n",
     "    df = pd.read_parquet(filename)\n",
+    "\n",
+    "    # create an artificial ride_id column:\n",
+    "    df['ride_id'] = f'{year:04d}/{month:02d}_' + df.index.astype('str')\n",
     "    \n",
     "    df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
     "    df['duration'] = df.duration.dt.total_seconds() / 60\n",
@@ -83,17 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4854399a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = read_data('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-03.parquet')"
+    "year = 2023\n",
+    "month = 3\n",
+    "\n",
+    "df = read_data(year, month)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "669fda0a",
    "metadata": {},
    "outputs": [],
@@ -105,29 +114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "b39d2c49",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6.247488852238703"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y_pred.std()"
+    "df_result = pd.DataFrame()\n",
+    "df_result['ride_id'] = df['ride_id']\n",
+    "df_result['y_pred'] = y_pred\n",
+    "\n",
+    "output_file = f'predictions_{year:04d}-{month:02d}.parquet'\n",
+    "\n",
+    "df_result\n",
+    "\n",
+    "df_result.to_parquet(\n",
+    "    output_file,\n",
+    "    engine='pyarrow',\n",
+    "    compression=None,\n",
+    "    index=False\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd9266f",
+   "id": "0fe3cfbf",
    "metadata": {},
    "outputs": [],
    "source": []
